--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ numpy==1.26.4
 packaging==24.1
 pandas==2.2.2
 pillow==10.3.0
-protobuf==4.25.3
+protobuf==3.20.3
 pyarrow==16.1.0
 pydeck==0.9.1
 pygments==2.18.0
@@ -42,3 +42,4 @@ urllib3==2.2.2
 watchdog==4.0.1
 folium==0.14.0
 mysql-connector-python==8.0.33
+branca==0.7.2
